# agent-kit

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/self-evolve/: config.jsonc
.agents/self-evolve/rules/: R-001.json
.agents/skills/core-release-followup/: SKILL.md
.agents/skills/self-evolve/: SKILL.md  catalog.json
.agents/skills/self-evolve/scripts/: add_rule.py
docs/superpowers/plans/: 2026-03-17-agents-md-layering.md  2026-03-18-wheel-plugin-install.md  2026-03-30-self-evolve-plugin.md  2026-03-31-self-evolve-v5-skill-driven.md  2026-03-31-zsh-completion.md
docs/superpowers/specs/: 2026-03-16-agent-kit-cli-design.md  2026-03-17-agents-md-layering-design.md  2026-03-18-wheel-plugin-install-design.md  2026-03-27-auto-create-profile-design.md  2026-03-30-next-first-party-plugin-ideas-issue.md  2026-03-30-self-evolve-plugin-design.md  2026-03-31-self-evolve-optimization-suggestions.md  2026-03-31-self-evolve-skill-optimization-design.md  2026-03-31-zsh-completion-design.md
registry/: official.json
scripts/: AGENTS.md
scripts/dev/: dev-env.sh  run_workspace_plugin.py
scripts/release/: ak-release.sh  release_plugin.py
src/agent_kit/: AGENTS.md  __init__.py  cli.py  completion.py  context.py  locale.py  messages.py  official_registry.json  paths.py  plugin_manager.py  registry.py  release_plugin.py  toolkits.py
tests/: test_completion.py  test_core_cli.py  test_dev_env_script.py  test_locale.py  test_plugin_manager.py  test_plugin_release_followup_policy.py  test_release_plugin.py  test_release_shortcut_script.py
