[project]
name = "agent-kit"
version = "0.2.10"
description = "Extensible CLI for agent toolkits."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "packaging>=24.1,<25.0",
    "questionary>=2.0,<3.0",
    "typer>=0.12,<1.0",
]

[project.scripts]
agent-kit = "agent_kit.cli:main"

[dependency-groups]
dev = [
    "opencode-env-switch",
    "skills-link",
    "pytest>=8.3,<9.0",
]

[tool.uv.sources]
opencode-env-switch = { workspace = true }
skills-link = { workspace = true }

[tool.uv.workspace]
members = ["packages/skills-link", "packages/opencode-env-switch"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "packages/skills-link/tests",
    "packages/opencode-env-switch/tests",
]

[build-system]
requires = ["hatchling>=1.27,<2.0"]
build-backend = "hatchling.build"
